--- a/src/hidden_markov_model.tex
+++ b/src/hidden_markov_model.tex
@@ -1,24 +1,24 @@
 % !TeX root = ../main.tex
 
-\section*{Hidden Markov Models HMM}
-\paragraph{Idea:}  A HMM \(\lambda = (A, B, \vec{\pi})\) is a generative\footnote{models the joint probability $p(<o_1,\dots, o_M>, <S_1,\dots, S_M>)$ of hidden states and a sequence} probabilistic approach to describing sequential data (e.g. speech data).
+\section{Hidden Markov Models HMM}
+\paragraph{Idea:}  A HMM \(\lambda = (\mat{A}, \mat{B}, \vec{\pi})\) is a generative\footnote{models the joint probability $p(<o_1,\dots, o_M>, <S_1,\dots, S_M>)$ of hidden states and a sequence} probabilistic approach to describing sequential data (\eg speech data).
 
 \begin{itemize}
-	\item A is a matrix of state transition probabilities \(a_{ij} = P[q_{t+1} = S_j | q_t = S_i]\)
-	\item B is a matrix of production probabilities \(b_j(v_k) = P[v_k at state S_j]\), where \(V={v_1,\dots,v_{|V|}}\) is the set of possible observations.
-	\item Values in each row of the matrices A and B sum up to 1.
+	\item $\mat{A}$ is a matrix of state transition probabilities \(a_{ij} = P[q_{t+1} = S_j | q_t = S_i]\)
+	\item $\mat{B}$ is a matrix of production probabilities \(b_j(v_k) = P[v_k\ \text{at state } S_j]\), where \(V={v_1,\dots,v_{|V|}}\) is the set of possible observations.
+	\item Values in each row of the matrices $\mat{A}$ and $\mat{B}$ sum up to 1.
 	\item \(\vec{\pi}\) is a vector of starting probabilities for each state.
 \end{itemize}
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.4\textwidth]{hmm.jpg}
-	\caption{We can represent a HMM as a graphical model similar to a state machine.}
+	\includestandalone{hidden-markov-model}
+	\caption[Hidden Markov Model]{We can represent a HMM as a graphical model similar to a state machine.}
 \end{figure}
 
 
 
-\subsection*{Production probability of an observation: \emph{Forward-/Backward-Algorithm}}
+\subsection{Production probability of an observation: \emph{Forward-/Backward-Algorithm}}
 Given a model \(\lambda\), what is \(p(<o_1,\dots, o_M>|\lambda)\), the probability of making an observation \(<o_1,\dots, o_M>\) given \(\lambda\)?
 
 Simple idea: Marginalize over all state sequences \footnote{The sums enumerate all possible state sequences; The products represent \(p(<S_1,\dots,S_M>) \cdot (p(<o_1,\dots, o_M>|<S_1,\dots,S_M>)\)}:
@@ -27,22 +27,23 @@ Simple idea: Marginalize over all state sequences \footnote{The sums enumerate a
 
 Problems with implementation:
 \begin{itemize}
-	\item Computing cost: \(O(N^M)\), because the sums will create M for loops
+	\item Computing cost: \(\mathcal{O}\left(N^M\right)\), because the sums will create M for loops
 	% \item Multiplying many small values will cause precision problems
 	\item Solution: dynamic programming (compute each factor as rarely / early as possible) $\Rightarrow$ Forward-/Backward Algorithm
 	\[p(<o_1,\dots,o_M>|\lambda) = \sum_{S_1=1}^{N} \pi_{S_1} b_{S_1}(o_1) \cdot \sum_{S_2=1}^{N} a_{S_1 S_2} b_{S_2}(o_2) \cdot \quad \ldots \quad \cdot \sum_{S_M=1}^{N} a_{S_{M - 1} S_{M}} b_{S_M}(o_M)\]
 \end{itemize}
 
-\paragraph{Forward Algorithm:}
-
+\begin{algorithm}[H]
+\caption{Forward Algorithm}
 \begin{enumerate}
     \item Initialization:
         \(\alpha_1(i) = \pi_i b_i(o_1)\)
     \item Induction:
-        \(\alpha_{t+1}(j) = (\sum_{i=1}^N \alpha_t(i) \cdot a_{ij}) b_j(o_{t+1})\)
+        \(\alpha_{t+1}(j) = \left(\sum_{i=1}^N \alpha_t(i) \cdot a_{ij}\right) b_j(o_{t+1})\)
     \item Termination:
         \(P(O|\lambda) = \sum_{i=1}^N \alpha_T(i)\)
 \end{enumerate}
+\end{algorithm}
 
 Meaning of $\alpha_t(i)$: Sum of all paths (probabilities) to end up in state $i$ in time step $t$.
 
@@ -51,13 +52,13 @@ Meaning of $\alpha_t(i)$: Sum of all paths (probabilities) to end up in state $i
 	\includegraphics[width=0.9\textwidth]{forward.jpg}
 \end{figure}
 
-\paragraph{Backward Algorithm:}
-
+\begin{algorithm}[H]
+\caption{Backward Algorithm}
 \begin{enumerate}
     \item Initialization: \(\beta_T (i) = 1\) (chosen arbitrarily)
     \item Induction: \(\beta_t(i) = \sum_{j=1}^N a_{ij} b_j(o_{t+1}) \beta_{t+1}(j)\)
 \end{enumerate}
-
+\end{algorithm}
 Meaning of $\beta_t(i)$: integration of all future paths (probabilities).
 
 \begin{figure}[H]
@@ -73,8 +74,8 @@ Naive idea: Choose the most likely state at each time step $t$. But the resultin
 
 Solution: Choose the best state sequence Q with the highest $\delta_t(i) = \max_{Q_1, \ldots, Q_{t-1}} P[q_1, \ldots, q_t=i, o_1, \ldots, q_t | \lambda]$, that ends at the time step $t$ in state $S_i$.
 
-\paragraph{Viterbi Algorithm:}
-
+\begin{algorithm}[H]
+\caption{Viterbi Algorithm}
 \begin{enumerate}
     \item Initialization:
         \begin{align*}
@@ -86,7 +87,7 @@ Solution: Choose the best state sequence Q with the highest $\delta_t(i) = \max_
             \delta_t(j) &= \max_i (\delta_{t-1}(i) \alpha_{ij} \cdot b_j(O_{t+1}))\\
             \psi_t(j) &= \argmax_i (\delta_{t-1}(i) \alpha_{ij})
         \end{align*}
-				, where $\psi_t(i)$ holds the index of the previous most likely state sequence in $\delta_{t-1}(i)$.
+				where $\psi_t(i)$ holds the index of the previous most likely state sequence in $\delta_{t-1}(i)$.
     \item Termination:
         \begin{align*}
             P^* &= \max_i \delta_T(i)\\
@@ -95,24 +96,24 @@ Solution: Choose the best state sequence Q with the highest $\delta_t(i) = \max_
     \item Path (state sequence) backtracking:
         \[q_t^* = \psi_{t+1}(q_{t+1}^*), \qquad \text{for } t = T-1, \dots, 1\]
 \end{enumerate}
+\end{algorithm}
 
+\subsection{Training of a HMM: \emph{Baum-Welch-Algorithm}}
 
-\subsection*{Training of a HMM: \emph{Baum-Welch-Algorithm}}
+How can we obtain the model parameters \(\lambda = (\mat{A}, \mat{B}, \vec{\pi})\) in a fully automated way (training)?
 
-How can we obtain the model parameters \(\lambda = (A, B, \vec{\pi})\) in a fully automated way (training)?
-
-Solution: Choose \(\lambda = (A, B, \vec{\pi})\) to locally maximize $p(O|\lambda)$
+Solution: Choose \(\lambda = (\mat{A}, \mat{B}, \vec{\pi})\) to locally maximize $p(O|\lambda)$
 
 \paragraph{Auxiliary Variables}
 \begin{itemize}
 	\item $\alpha_t(i) = p(o_1,\dots, o_t, q_t=S_i|\lambda)$: probability of partial observation sequence ending in $S_i$ at time $t$.
 	\item $\beta_t(i) = p(o_1,\dots, o_t | q_t=S_i, \lambda)$: probability of partial future observation sequence starting in $S_i$ at time $t$.
-	\item $\gamma_t(j) = p(q_t=S_i|O, \lambda)$: probability of being in state $S_j$ at time $t$.
+	\item $\gamma_t(i) = p(q_t=S_i|O, \lambda)$: probability of being in state $S_i$ at time $t$.
 	\item $\xi_t(i,j) = p(q_t=S_i, q_{t+1}=S_j|O, \lambda)$: probability of transitioning from $S_i$ to $S_j$ at time $t$.
 \end{itemize}
 
-\paragraph{Baum-Welch-Algorithm (EM-type Algorithm):}
-
+\begin{algorithm}[H]
+\caption[Baum-Welch-Algorithm]{Baum-Welch-Algorithm (EM-type Algorithm)}
 \begin{enumerate}
     \item Initialization: \(\lambda = (A, B, \vec{\pi})\)
     \item While ($\bar{\lambda} \neq \lambda$) {
@@ -129,13 +130,13 @@ Solution: Choose \(\lambda = (A, B, \vec{\pi})\) to locally maximize $p(O|\lambd
 		\end{enumerate}
 		}
 \end{enumerate}
+\end{algorithm}
 
 
-
-\subsection*{Remarks on HMM}
+\subsection{Remarks on HMM}
 
 \begin{itemize}
     \item the directed edge in a HMM graph can be understood as a statistical dependency $p(S_2|S_1)$
     \item generative approach
-    \item For many tasks including speech processing, we often only allow state transitions $a_{ij}$ with $i \le j$ (no backward links). So called "left-right-HMMs".
+    \item For many tasks including speech processing, we often only allow state transitions $a_{ij}$ with $i \le j$ (no backward links). So-called ``left-right-HMMs''.
 \end{itemize}
